--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
 
 <html>
 <head>
-	<title>Semantic Co-Speech Gesture</title>
+	<title>SemGes: Semantic-Aware Gesture Generation through Semantic Coherence and
+		Relevance Learning</title>
 	<meta property="og:image" content="Path to my teaser.png"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
 	<meta property="og:title" content="Semmantic Co-Speech Gesture." />
 	<meta property="og:description" content="Paper description." />
@@ -138,7 +139,8 @@
 <body>
 	<br>
 	<center>
-		<span style="font-size:36px">Semantic Co-Speech Gesture</span>
+		<span style="font-size:36px">SemGes: Semantic-Aware Gesture Generation through Semantic Coherence and
+			Relevance Learning</span>
 		<table align=center width=600px>
 			<table align=center width=600px>
 				<tr>
@@ -266,7 +268,8 @@
 		<tr>
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
 			<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
-				<b>Semantic Co-Speech Gesture.</b><br>
+				<b>SemGes: Semantic-Aware Gesture Generation through Semantic Coherence and
+					Relevance Learning</b><br>
 				In Conference, 20XX.<br>
 				(hosted on <a href="">ArXiv</a>)<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
