--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 	<center>
 		<span style="font-size:36px">SemGes: Semantic-Aware Gesture Generation through Semantic Coherence and
 			Relevance Learning</span>
-		<table align=center width=600px>
+		<!-- <table align=center width=600px>
 			<table align=center width=600px>
 				<tr>
 					<td align=center width=100px>
@@ -160,8 +160,8 @@
 						</center>
 					</td>
 				</tr>
-			</table>
-			<table align=center width=250px>
+			</table> -->
+			<!-- <table align=center width=250px>
 				<tr>
 					<td align=center width=120px>
 						<center>
@@ -195,7 +195,7 @@
 				</td>
 			</tr>
 		</table>
-	</center>
+	</center> -->
 
 	<hr>
 
@@ -203,7 +203,7 @@
 		<center><h1>Abstract</h1></center>
 		<tr>
 			<td>
-				This is my abstract.
+				Creating a virtual avatar with semantically coherent gestures that are aligned with speech is a challenging task. Existing gesture generation research mainly focused on generating rhythmic beat gestures, neglecting the semantic context of the gestures. In this paper, we propose a novel approach for semantic grounding in co-speech gesture generation that integrates semantic information at both fine-grained and global levels. Our approach starts with learning the motion prior through a vector-quantized variational autoencoder. Built on this model, a second-stage module is applied to automatically generate gestures from speech, text-based semantics and speaker identity that ensures consistency between the semantic relevance of generated gestures and co-occurring speech semantics through semantic coherence and relevance modules. Experimental results demonstrate that our approach enhances the realism and coherence of semantic gestures. Extensive experiments and user studies show that our method outperforms state-of-the-art approaches across two benchmarks in co-speech gesture generation in both objective and subjective metrics.
 			</td>
 		</tr>
 	</table>
@@ -215,7 +215,7 @@
 		<iframe width="660" height="395" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
 	</p>
 
-	<table align=center width=800px>
+	<!-- <table align=center width=800px>
 		<br>
 		<tr>
 			<center>
@@ -224,9 +224,9 @@
 			</center>
 		</tr>
 	</table>
-	<hr>
+	<hr> -->
 
-	<center><h1>Code</h1></center>
+	<!-- <center><h1>Code</h1></center>
 
 	<table align=center width=420px>
 		<center>
@@ -261,8 +261,8 @@
 			</center>
 		</span>
 	</table>
-	<br>
-	<hr>
+	<br> -->
+	<!-- <hr>
 	<table align=center width=450px>
 		<center><h1>Paper and Supplementary Material</h1></center>
 		<tr>
@@ -272,23 +272,23 @@
 					Relevance Learning</b><br>
 				In Conference, 20XX.<br>
 				(hosted on <a href="">ArXiv</a>)<br>
-				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
+				(<a href="./resources/camera-ready.pdf">camera ready</a>)<br>
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
 			</td>
 		</tr>
 	</table>
-	<br>
+	<br> -->
 
-	<table align=center width=600px>
+	<!-- <table align=center width=600px>
 		<tr>
 			<td><span style="font-size:14pt"><center>
 				<a href="./resources/bibtex.txt">[Bibtex]</a>
 			</center></td>
 		</tr>
-	</table>
+	</table> -->
 
-	<hr>
+	<!-- <hr>
 	<br>
 
 	<table align=center width=900px>
@@ -300,7 +300,7 @@
 				</left>
 			</td>
 		</tr>
-	</table>
+	</table> -->
 
 <br>
 </body>
