--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SemGes: Semantic-Aware Gesture Generation</title>
 
+    <!-- Swiper.js CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
+
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Georgia&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 
         body {
-            font-family: 'Playfair Display', Georgia, serif;
-            font-weight: 400;
+            font-family: 'Playfair Display', serif;
             font-size: 18px;
             margin-left: auto;
             margin-right: auto;
@@ -25,24 +27,38 @@
             color: #333;
         }
 
-        .video-container {
-            text-align: center;
-            margin: 20px 0;
+        /* Swiper styles */
+        .swiper-container {
+            width: 100%;
+            max-width: 900px;
+            margin: auto;
+            padding-top: 20px;
+            padding-bottom: 40px;
         }
 
-        video {
-            width: 80%;
-            max-width: 800px;
-            border-radius: 12px;
-            border: 2px solid #ccc;
+        .swiper-slide {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: #fff;
+            border-radius: 10px;
+            overflow: hidden;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
         }
 
+        video {
+            width: 100%;
+            max-width: 600px;
+            border-radius: 12px;
+            border: 2px solid #ccc;
+        }
+
         .video-caption {
-            font-size: 20px;
+            text-align: center;
+            font-size: 16px;
             color: #555;
             font-style: italic;
-            margin-top: 10px;
+            margin-top: 5px;
         }
 
         .content {
@@ -50,6 +66,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -57,18 +74,35 @@
 
     <br>
     <center>
-        <h1>SemGes: Semantic-Aware Gesture Generation through Semantic Coherence and Relevance Learning</h1>
+        <h1>SemGes: Semantic-Aware Gesture Generation</h1>
     </center>
 
-    <div class="video-container">
-        <video controls>
-            <source src="your-video-file.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <div class="video-caption">
-            Figure 1: Example of generated gestures from our model.
+    <!-- Swiper for videos (above abstract) -->
+    <div class="swiper-container swiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <video controls>
+                    <source src="video1.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="swiper-slide">
+                <video controls>
+                    <source src="video2.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="swiper-slide">
+                <video controls>
+                    <source src="video3.mp4" type="video/mp4">
+                </video>
+            </div>
         </div>
+        <!-- Pagination & navigation -->
+        <div class="swiper-pagination"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
     </div>
+
+    <div class="video-caption">Figure 1: Example of generated gestures from our model.</div>
 
     <div class="content">
         <h1>Abstract</h1>
@@ -81,6 +115,51 @@
             Extensive experiments and user studies show that our method outperforms state-of-the-art approaches across two benchmarks in co-speech gesture generation in both objective and subjective metrics.
         </p>
     </div>
+
+    <!-- Swiper for videos (below abstract) -->
+    <div class="swiper-container swiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <video controls>
+                    <source src="video4.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="swiper-slide">
+                <video controls>
+                    <source src="video5.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="swiper-slide">
+                <video controls>
+                    <source src="video6.mp4" type="video/mp4">
+                </video>
+            </div>
+        </div>
+        <!-- Pagination & navigation -->
+        <div class="swiper-pagination"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </div>
+
+    <div class="video-caption">Figure 2: Additional examples demonstrating semantic-aware gestures.</div>
+
+    <!-- Swiper.js Script -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".swiper", {
+            slidesPerView: 1,
+            spaceBetween: 10,
+            loop: true,
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+        });
+    </script>
 
 </body>
 </html>
