--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 
     <br>
     <center>
-        <h1>SemGes: Semantic-Aware Gesture Generation</h1>
+        <h1>SemGes: Semantic-Aware Gesture Generation through Semantic Coherence and
+			Relevance Learning</h1>
     </center>
 
     <!-- Swiper for videos (above abstract) -->
@@ -102,7 +103,7 @@
         <div class="swiper-button-next"></div>
     </div>
 
-    <div class="video-caption">Figure 1: Example of generated gestures from our model.</div>
+    <div class="video-caption">Figure 1: Retaegrt Avatar from generated gestures from our model.</div>
 
     <div class="content">
         <h1>Abstract</h1>
@@ -141,7 +142,7 @@
         <div class="swiper-button-next"></div>
     </div>
 
-    <div class="video-caption">Figure 2: Additional examples demonstrating semantic-aware gestures.</div>
+    <div class="video-caption">Figure 2: Orignal demonstrating semantic generated gesture in motion capture datasets.</div>
 
     <!-- Swiper.js Script -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
