--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <video controls>
-                    <source src="video1.mp4" type="video/mp4">
+                    <source src="video/3.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="swiper-slide">
@@ -122,7 +122,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <video controls>
-                    <source src="video4.mp4" type="video/mp4">
+                    <source src="video/3.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="swiper-slide">
@@ -142,7 +142,7 @@
         <div class="swiper-button-next"></div>
     </div>
 
-    <div class="video-caption">Figure 2: Orignal demonstrating semantic generated gesture in motion capture datasets.</div>
+    <div class="video-caption">Figure 2: Demonstrating semantic generated gesture in motion capture datasets.</div>
 
     <!-- Swiper.js Script -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
