--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <video controls>
+                    <source src="video/1.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="swiper-slide">
+                <video controls>
+                    <source src="video/2.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="swiper-slide">
+                <video controls>
                     <source src="video/3.mp4" type="video/mp4">
-                </video>
-            </div>
-            <div class="swiper-slide">
-                <video controls>
-                    <source src="video2.mp4" type="video/mp4">
-                </video>
-            </div>
-            <div class="swiper-slide">
-                <video controls>
-                    <source src="video3.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
@@ -132,7 +132,7 @@
             </div>
             <div class="swiper-slide">
                 <video controls>
-                    <source src="video6.mp4" type="video/mp4">
+                    <source src="video/6.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
