--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="swiper-button-next"></div>
     </div>
 
-    <div class="video-caption">Figure 1: Retaegrt Avatar from generated gestures from our model.</div>
+    <div class="video-caption">SemGes: Retaegrt Avatar from generated gestures from our model.</div>
 
     <div class="content">
         <h1>Abstract</h1>
@@ -142,7 +142,7 @@
         <div class="swiper-button-next"></div>
     </div>
 
-    <div class="video-caption">Figure 2: Demonstrating semantic generated gesture in motion capture datasets.</div>
+    <div class="video-caption">SemGes: Demonstrating semantic generated gesture in motion capture datasets.</div>
 
     <!-- Swiper.js Script -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
