--- a/index.html
+++ b/index.html
@@ -83,45 +83,6 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <video controls>
-                    <source src="video/1.mp4" type="video/mp4">
-                </video>
-            </div>
-            <div class="swiper-slide">
-                <video controls>
-                    <source src="video/2.mp4" type="video/mp4">
-                </video>
-            </div>
-            <div class="swiper-slide">
-                <video controls>
-                    <source src="video/3.mp4" type="video/mp4">
-                </video>
-            </div>
-        </div>
-        <!-- Pagination & navigation -->
-        <div class="swiper-pagination"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-    </div>
-
-    <div class="video-caption">SemGes: Retaegrt Avatar from generated gestures from our model.</div>
-
-    <div class="content">
-        <h1>Abstract</h1>
-        <p>
-            Creating a virtual avatar with semantically coherent gestures that are aligned with speech is a challenging task.
-            Existing gesture generation research mainly focused on generating rhythmic beat gestures, neglecting the semantic context of the gestures.
-            In this paper, we propose a novel approach for semantic grounding in co-speech gesture generation that integrates semantic information at both fine-grained and global levels.
-            Our approach starts with learning the motion prior through a vector-quantized variational autoencoder. Built on this model, a second-stage module is applied to automatically generate gestures from speech, text-based semantics, and speaker identity that ensures consistency between the semantic relevance of generated gestures and co-occurring speech semantics through semantic coherence and relevance modules.
-            Experimental results demonstrate that our approach enhances the realism and coherence of semantic gestures.
-            Extensive experiments and user studies show that our method outperforms state-of-the-art approaches across two benchmarks in co-speech gesture generation in both objective and subjective metrics.
-        </p>
-    </div>
-
-    <!-- Swiper for videos (below abstract) -->
-    <div class="swiper-container swiper">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <video controls>
                     <source src="video/4.mp4" type="video/mp4">
                 </video>
             </div>
@@ -142,7 +103,20 @@
         <div class="swiper-button-next"></div>
     </div>
 
-    <div class="video-caption">SemGes: Demonstrating semantic generated gesture in motion capture datasets.</div>
+    <div class="video-caption">SemGes: semantically generated gestures from our model.</div>
+
+    <div class="content">
+        <h1>Abstract</h1>
+        <p>
+            Creating a virtual avatar with semantically coherent gestures that are aligned with speech is a challenging task.
+            Existing gesture generation research mainly focused on generating rhythmic beat gestures, neglecting the semantic context of the gestures.
+            In this paper, we propose a novel approach for semantic grounding in co-speech gesture generation that integrates semantic information at both fine-grained and global levels.
+            Our approach starts with learning the motion prior through a vector-quantized variational autoencoder. Built on this model, a second-stage module is applied to automatically generate gestures from speech, text-based semantics, and speaker identity that ensures consistency between the semantic relevance of generated gestures and co-occurring speech semantics through semantic coherence and relevance modules.
+            Experimental results demonstrate that our approach enhances the realism and coherence of semantic gestures.
+            Extensive experiments and user studies show that our method outperforms state-of-the-art approaches across two benchmarks in co-speech gesture generation in both objective and subjective metrics.
+        </p>
+    </div>
+
 
     <!-- Swiper.js Script -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
