--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
     <br>
     <center>
-        <h1>SemGes: Semantic-Aware Gesture Generation through Semantic Coherence and
-			Relevance Learning</h1>
+        <h1>SemGes: Semantics-aware Co-Speech Gesture Generation using Semantic
+			Coherence and Relevance Learning</h1>
     </center>
 
     <!-- Swiper for videos (above abstract) -->
