--- a/index.html
+++ b/index.html
@@ -300,6 +300,27 @@
 		</div>
 	</body>
 	</html>
+
+		<!-- Main Results Section -->
+		<div class="framework">
+			<h2>📊 Main Results</h2>
+			<p>Our model achieves state-of-the-art performance across multiple benchmarks with significant improvements in 
+				BEAT and TED Expressive datasets .</p>
+			<img src="resources/res.png" alt="SemGes Framework">
+
+		</div>
+	</body>
+	</html>
+
+
+		<!-- User Study Section -->
+		<div class="framework">
+			<h2>👥 User Study</h2>
+        <p>We conducted extensive user studies to evaluate the naturalness, diversity, and alignment with speech content and timing of our generated gestures. The results confirm that our model outperforms existing approaches.</p>
+			<img src="resources/" alt="SemGes Framework">
+		</div>
+	</body>
+	</html>
 	
     <!-- Swiper.js Script -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
