--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </div>
 
     <div class="content">
-        <h1>Abstract</h1>
+        <h1>📄 Abstract</h1>
         <p>Creating a virtual avatar with semantically coherent gestures that are aligned with speech is a challenging task. Existing gesture generation research mainly focused on generating rhythmic beat gestures, neglecting the semantic context of the gestures. In this paper, we propose a novel approach for semantic grounding in co-speech gesture generation that integrates semantic information at both fine-grained and global levels. Our approach starts with learning the motion prior through a vector-quantized variational autoencoder. Built on this model, a second-stage module is applied to automatically generate gestures from speech, text-based semantics and speaker identity that ensures consistency between the semantic relevance of generated gestures and co-occurring speech semantics through semantic coherence and relevance modules. Experimental results demonstrate that our approach enhances the realism and coherence of semantic gestures. Extensive experiments and user studies show that our method outperforms state-of-the-art approaches across two benchmarks in co-speech gesture generation in both objective and subjective metrics.</p>
     </div>
 	<!DOCTYPE html>
@@ -317,7 +317,7 @@
 		<div class="framework">
 			<h2>👥 User Study</h2>
         <p>We conducted extensive user studies to evaluate the naturalness, diversity, and alignment with speech content and timing of our generated gestures. The results confirm that our model outperforms existing approaches.</p>
-			<img src="resources/" alt="SemGes Framework">
+			<img src="resources/user.png" alt="SemGes Framework">
 		</div>
 	</body>
 	</html>
