--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                             <source src="video/4.mp4" type="video/mp4">
                         </video>
                     </div>
-                    <div class="swiper-slide">
+                    <!-- <div class="swiper-slide">
                         <video controls>
                             <source src="video/5.mp4" type="video/mp4">
                         </video>
@@ -330,7 +330,7 @@
                         <video controls>
                             <source src="video/6.mp4" type="video/mp4">
                         </video>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- Pagination & navigation -->
                 <div class="swiper-pagination"></div>
