--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     </div>
 
     <div class="video-caption">Method Overview</div>
+    <div class="video-caption">(Hint: The video plays smoothly in Opera and Chrome browsers.)</div>
 
     <!-- Highlights Section -->
     <div class="highlights">
