--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <video controls>
-                    <source src="video/Semges_Final.mp4" type="video/mp4">
+                    <source src="video/SemGes.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
