--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </a>
     
     <!-- GitHub Button -->
-    <a href="https://github.com/your-repo/semges" target="_blank" style="
+    <a href="https://github.com/marcos452/SemGes" target="_blank" style="
         background-color: #2e2e2e;
         color: white;
         text-decoration: none;
