--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <div style="display: flex; justify-content: center; gap: 12px; margin-top: 30px; flex-wrap: wrap;">
 
     <!-- arXiv Button -->
-    <a href="" target="_blank" style="
+    <a href="https://www.arxiv.org/abs/2507.19359" target="_blank" style="
         background-color: #2e2e2e;
         color: white;
         text-decoration: none;
