--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
         <p style="font-size: 15px; color: #555; font-family: 'Courier New', Courier, monospace;">
           {lanmiao.liu, esam.ghaleb, asli.ozyurek}@mpi.nl &nbsp;&nbsp;&nbsp; z.yumak@uu.nl
         </p>
+
+        <!-- Conference Tag -->
+        <p style="font-size: 16px; color: #B22222; font-weight: bold; font-family: 'Helvetica', sans-serif; margin-top: 5px;">
+            🏆 Accepted at <span style="color: #1D9BF0;">ICCV 2025</span>
+        </p>
+
       </center>
       
     <div style="display: flex; justify-content: center; gap: 12px; margin-top: 30px; flex-wrap: wrap;">
